--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,68 @@
-# Compiled class file
-*.class
+#   Folders   #
+###############
 
-# Log file
+.settings/
+allure-results/
+*test-output/
+*target/
+out/
+appium/
+apps/
+screenshots/
+trafficlogs/
+failedRequests/
+*.log*/
+tmp-*/
+/classes/
+/trafficlogs/
+ReportPortal/
+temp/
+
+#    Files    #
+###############
+*.classpath
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
+*.har
+*.png
+*log_soap.txt
 *.zip
-*.tar.gz
-*.rar
+.project
+/local.properties
+test.properties
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#     IDEA    #
+###############
+*.iws
+*.metadata*
+*.ipr
+.idea
+.idea/workspace.xml
+.idea/tasks.xml
+/out/
+
+
+#    Gradle   #
+###############
+.gradle
+*build/
+.idea/gradle.xml
+.idea/libraries
+
+#    JSON_schema   #
+###############
+*JSON_schema.json
+module_locale_hash.temp
+
+#   Windows files   #
+###############
+Thumbs.db
+ehthumbs.db
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+#   Java   #
+###############
+*.class
